--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">AEHCA Inc</a>
       <button
         class="navbar-toggler"
         type="button"
