--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">AEHCA Inc</a>
+      <a class="navbar-brand" href="#">
+        <img
+          src="images/EfB0WjG.png"
+          width="30"
+          height="30"
+          class="d-inline-block align-top"
+          alt="aehca inc logo"
+        />
+        AEHCA Inc
+      </a>
+
       <button
         class="navbar-toggler"
         type="button"
@@ -44,39 +54,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#"><b>$</b> Donate</a>
+            <a class="nav-link" href="#"><b>$</b> Donate</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
       </div>
     </nav>
 
