--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Association for Education and Health in Central America</title>
   </head>
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="images/EfB0WjG.png"
+          src="images/icon.ico"
           width="30"
           height="30"
           class="d-inline-block align-top"
