--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><b>$</b> Donate</a>
+            <a class="nav-link" href="#"><b>Partnerships</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><b>$</b> Give</a>
           </li>
         </ul>
       </div>
