--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><b>Partnerships</a>
+            <a class="nav-link" href="#">Partnerships</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><b>$</b> Give</a>
