updates and new pages

--- a/index.html
+++ b/index.html
@@ -11,76 +11,232 @@
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-
     <title>Association for Education and Health in Central America</title>
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
-        <img
-          src="images/icon.ico"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt="aehca inc logo"
-        />
-        AEHCA Inc
-      </a>
+    <header>
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+          <!-- CHANGE FOR OTHER PAGES. MAKE INDEX.HTML-->
+          <img
+            src="images/icon.ico"
+            width="30"
+            height="30"
+            class="d-inline-block align-top"
+            alt="aehca inc logo"
+          />
+          AEHCA Inc
+        </a>
 
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Partnerships</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><b>$</b> Give</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Home <span class="sr-only">(current)</span>
+              </a>
+              <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">About</a>
+                <a class="dropdown-item" href="#">Partnerships</a>
+                <a class="dropdown-item" href="#">Donate</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item disabled" href="#">Privacy Policy</a>
+                <a class="dropdown-item disabled" href="#"
+                  >Terms and Conditions</a
+                >
+                <a class="dropdown-item disabled" href="#">Contact</a>
+              </div>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#"><b>$</b> Give</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <!-- END NAVBAR -->
-
+    <main role="main" class="container">
+      <h1 class="mt-5">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+        hendrerit tellus nulla, quis tristique ex consequat ac. Donec dapibus
+        libero eget magna lobortis congue. Aliquam commodo pretium turpis quis
+        iaculis. Aenean quis aliquet nisi. Fusce viverra, erat non feugiat
+        hendrerit, diam neque tincidunt orci, in lobortis diam massa sit amet
+        nisi. Phasellus quis sem blandit, pretium eros eu, maximus justo. Duis
+        accumsan venenatis mauris sed tristique. Nullam sapien erat, dapibus in
+        tellus in, congue vulputate risus. Morbi non consequat augue. Donec
+        sagittis risus molestie ipsum efficitur, eu placerat odio vestibulum.
+        Aliquam ornare sit amet velit iaculis elementum. Integer id elit nulla.
+        Phasellus eget eleifend massa, a euismod est. Vestibulum malesuada quis
+        sapien vel euismod. Donec quis elit sagittis, porta ligula a, viverra
+        sapien. Sed eget lectus facilisis, laoreet quam nec, placerat neque.
+        Vestibulum et lorem vitae tellus vulputate faucibus. Sed blandit mauris
+        sit amet tortor volutpat vehicula. Morbi maximus nisi nec neque pretium
+        vestibulum. Etiam consequat lorem vitae tempor ultrices. Vivamus in
+        felis vitae nulla hendrerit malesuada. Integer viverra eget felis sed
+        eleifend. Praesent nec risus sed orci condimentum egestas. Cras eget
+        eleifend nibh. Duis et sagittis velit. Curabitur eu risus vel magna
+        faucibus molestie. Nulla imperdiet luctus condimentum. Morbi accumsan
+        ante euismod, mollis leo eget, pellentesque ex. Etiam sed diam in mauris
+        gravida tempus. Mauris ac malesuada justo. Aliquam erat volutpat.
+        Aliquam sed libero non ante venenatis malesuada. Curabitur ante est,
+        dictum viverra luctus quis, bibendum in elit. Nulla risus leo, fringilla
+        eget fermentum id, pretium et nisi. Sed suscipit congue elit vestibulum
+        elementum. Pellentesque aliquet lorem nec massa mattis dignissim. Morbi
+        varius neque in odio ornare, sagittis sollicitudin quam porta. Curabitur
+        sodales pulvinar imperdiet. Sed gravida arcu at orci bibendum, ac mattis
+        dui sollicitudin. Duis a justo sem. Maecenas at condimentum augue,
+        volutpat varius tellus. Vestibulum purus ante, gravida a condimentum eu,
+        iaculis at dui. Cras a dolor diam. Nam in elit in nunc lacinia ultrices
+        ac non augue. Vivamus at rutrum elit. Nam fermentum pellentesque urna,
+        eget efficitur libero vulputate in. Fusce odio dolor, semper quis
+        dapibus non, egestas sit amet leo. Maecenas nec scelerisque velit. Etiam
+        varius placerat consequat. Aenean congue posuere tempor. Nulla tincidunt
+        commodo ligula, at varius turpis interdum et. Curabitur quis erat et
+        nisl convallis aliquet. Sed imperdiet ex nisl, a vulputate nisl molestie
+        vitae. Suspendisse vel ante diam. Ut ornare, neque a vehicula hendrerit,
+        diam velit placerat augue, at elementum est lectus quis augue. Cras
+        luctus faucibus tempus. Sed suscipit et augue malesuada interdum. Nulla
+        eu leo sollicitudin, dictum risus eu, hendrerit odio. Curabitur in nisl
+        a leo varius facilisis. Aenean feugiat maximus ipsum. Fusce sed
+        imperdiet erat. Praesent ut elementum ligula. Proin dolor tellus,
+        lacinia nec libero blandit, ornare convallis turpis. Integer aliquam,
+        ligula porttitor efficitur hendrerit, mauris lacus suscipit nibh, vel
+        dictum risus magna at leo. Proin mattis ex quis pulvinar rutrum. Sed sem
+        lectus, mollis at erat sit amet, dapibus sodales diam. Sed lorem nisi,
+        lacinia auctor lectus eu, sodales egestas nibh. Proin luctus quam nunc,
+        eu consequat tellus malesuada eget. Nullam ut laoreet risus, pretium
+        fermentum nibh. Mauris dictum rhoncus tincidunt. Pellentesque faucibus
+        pretium pretium. Pellentesque luctus sem auctor leo dapibus aliquam.
+        Praesent sed consequat est, eu consectetur nunc. Integer efficitur
+        accumsan dui sit amet blandit. Suspendisse potenti. Cras et luctus
+        nulla. Mauris eget est in ligula blandit auctor vel et nulla. Mauris
+        convallis tortor quis ultricies sodales. Pellentesque nec semper ligula,
+        et placerat ipsum. Vivamus eget rutrum risus, sed placerat diam.
+        Vestibulum sed dictum justo, vitae lacinia neque. Morbi at auctor enim,
+        vitae vulputate justo. Cras ultrices, nulla at dignissim interdum, metus
+        ex suscipit mi, eget gravida velit quam vel nisi. Nulla facilisi. Mauris
+        est est, faucibus vel tortor sed, varius ullamcorper elit. Maecenas
+        lacinia nibh nisl. Donec eu velit non nunc faucibus fringilla. Cras
+        fermentum facilisis tristique. Proin aliquet dapibus metus. Integer quam
+        est, ullamcorper eget volutpat blandit, facilisis nec purus. Praesent
+        non ullamcorper felis. Vestibulum eget quam et orci tristique sodales.
+        Suspendisse non purus et odio rhoncus tincidunt. Duis lobortis, enim in
+        venenatis pretium, turpis mauris tempus ex, sed tincidunt nibh dui in
+        dui. Vestibulum aliquam ut odio sit amet rutrum. Mauris posuere
+        dignissim risus, sit amet hendrerit nulla vehicula eu. Phasellus
+        elementum rutrum enim id semper. Morbi eu eros justo. Suspendisse sed
+        condimentum libero, accumsan ullamcorper purus. Suspendisse cursus vitae
+        libero sed aliquam. Pellentesque placerat dapibus fermentum. Maecenas
+        vitae aliquam leo. Praesent dignissim sapien felis, non maximus ligula
+        molestie vitae. Curabitur urna neque, eleifend nec felis vel, auctor
+        condimentum velit. Quisque hendrerit velit sit amet nunc condimentum,
+        eget semper sem dictum. Pellentesque eu lectus mi. Aliquam maximus
+        lectus id neque aliquam laoreet. Ut ultricies elit varius sem bibendum,
+        porttitor bibendum felis molestie. Sed eget aliquet augue. Quisque
+        dignissim pellentesque magna, a tristique elit dictum eu. Aliquam erat
+        volutpat. Donec blandit eros vel odio tempus imperdiet. Suspendisse quam
+        odio, rutrum sed leo ac, sagittis venenatis elit. Nullam nec rhoncus
+        metus. Sed ut ornare odio, scelerisque condimentum lectus. Cras tempus
+        enim tincidunt, bibendum magna sed, ultrices metus. In viverra urna
+        ante, vitae rutrum est tempor ac. Proin sed faucibus felis, eu cursus
+        neque. Curabitur dignissim pulvinar sem, sed laoreet erat consequat
+        eget. Maecenas congue malesuada massa eu lacinia. Maecenas eu erat vitae
+        mauris rhoncus laoreet. Vestibulum nec est magna. Nulla congue metus ut
+        ipsum venenatis, sit amet tincidunt purus ultricies. Integer luctus
+        laoreet dictum. Nam pellentesque, lectus sed lobortis scelerisque, erat
+        orci blandit nunc, id dapibus justo dolor eu nisl. Nullam tempor auctor
+        libero, vitae volutpat justo varius vel. Nulla ut ipsum quis leo
+        volutpat suscipit. Proin ac sapien sed augue ullamcorper convallis. Nam
+        vitae rutrum eros. Vivamus mattis ex bibendum iaculis tempor. Maecenas
+        tincidunt aliquet risus, et convallis erat ultrices nec. Maecenas
+        molestie risus nec scelerisque fermentum. Etiam mattis vestibulum
+        finibus. Etiam tristique faucibus nisi, vitae pharetra diam varius in.
+        In rutrum ante vitae tortor mattis, id malesuada massa gravida. Integer
+        vulputate, sem vel venenatis convallis, nibh enim ullamcorper tortor,
+        vel ullamcorper nisi ligula sed metus. Ut in risus nisi. Duis ut augue
+        scelerisque, pellentesque mauris et, euismod ante. Donec elit nibh,
+        dignissim lobortis ipsum sed, porttitor placerat ipsum. Cras posuere
+        accumsan purus, non ultricies dolor. Praesent ac ipsum nulla. Nunc et
+        laoreet lectus. Nunc tempor ipsum in ex rhoncus imperdiet. Nullam
+        maximus faucibus sapien. Curabitur posuere egestas bibendum. Vestibulum
+        elementum venenatis dolor sit amet imperdiet. Aliquam ultricies enim
+        vitae libero ullamcorper, ac venenatis felis interdum. Mauris purus
+        urna, finibus et porttitor eu, suscipit sed nisl. Cras enim ex, faucibus
+        et odio non, dapibus ultricies sapien. Duis mattis magna eget est
+        pretium, a dapibus quam tincidunt. Class aptent taciti sociosqu ad
+        litora torquent per conubia nostra, per inceptos himenaeos. Sed semper
+        sapien at nibh convallis rhoncus. Integer in tortor a eros lobortis
+        elementum. Praesent tincidunt felis ante. Nulla ut est scelerisque,
+        ultricies leo vel, laoreet magna. Vestibulum ut tellus sit amet augue
+        commodo aliquam non et velit.
+      </h1>
+    </main>
+    <div class="navbar-fixed-bottom navbar-light bg-light text-center">
+        <small
+            >AEHCA Inc. is a developing non-profit association working to build
+            relationships with partners in Central America. To give support to
+            our cause, please visit our
+            <a href="give.html">donation page.</a></small
+          ></span>
+    </div>
+    <!-- FOOTER
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">
+          <small
+            >AEHCA Inc. is a developing non-profit association working to build
+            relationships with partners in Central America. To give support to
+            our cause, please visit our
+            <a href="give.html">donation page.</a></small
+          ></span
+        >
+      </div>
+       -->
+    </footer>
+    <!-- END FOOTER -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
   </body>
