added ico image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <title>Association for Education and Health in Central America</title>
+    <link rel="shortcut icon" href="images/icon.ico"/>
   </head>
   <body>
     <!-- NAVBAR -->
