--- a/partnerships.html
+++ b/partnerships.html
@@ -79,7 +79,7 @@
                 <a class="dropdown-item text-muted" href="terms.html"
                   >Terms and Conditions</a
                 >
-                <a class="dropdown-item text-muted" href="#">Contact</a>
+                <a class="dropdown-item text-muted" href="contact.html">Contact</a>
               </div>
             </li>
           </ul>
@@ -88,7 +88,7 @@
           <!-- END GOOGLE TRANSLATE BUTTON-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"><b>$</b> Give</a>
+              <a class="nav-link" href="give.html"><b>$</b> Give</a>
             </li>
           </ul>
         </div>
