updated footer donation page link

--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -309,7 +309,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="give.html">donation page.</a></small
+                <a href="../../give.html">donation page.</a></small
               ></span>
         </div>
     </footer>
