updated colors and links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-warning"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -88,7 +88,7 @@
             <!-- END GOOGLE TRANSLATE BUTTON-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="give.html"><b>$</b> Give</a>
+              <a class="nav-link text-warning" href="give.html"><b>$</b> Give</a>
             </li>
           </ul>
         </div>
