--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -31,7 +31,7 @@
     <!-- NAVBAR -->
     <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../../index.html">
           <!-- CHANGE FOR OTHER PAGES. MAKE INDEX.HTML-->
           <img
             src="../../images/icon.ico"
@@ -57,9 +57,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active dropdown">
+            <li class="nav-item active dropdown text-warning">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-warning"
                 href="#"
                 id="navbarDropdown"
                 role="button"
@@ -88,7 +88,7 @@
           <!-- END GOOGLE TRANSLATE BUTTON-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../../give.html"><b>$</b> Give</a>
+              <a class="nav-link text-warning" href="../../give.html"><b>$</b> Give</a>
             </li>
           </ul>
         </div>
