fixed positioning of Read more button

--- a/index.html
+++ b/index.html
@@ -123,14 +123,17 @@
                         days in the hope of slowing the virus's spread.
                         
                     </div>
-                  </div>
+                </div>
                   <p></p>
-                  <div class="display-4">
+                <div class="display-4">
                     <img src="images/ipala.jpg" class="img-fluid rounded" alt="Responsive image">
                 </div>
-
                 <p></p>
-                <a class="btn btn-dark float-right" href="news/2.html" role="button">Read more</a>
+                <div class="row">
+                    <div class="col text-right">
+                        <a class="btn btn-dark float-right" href="news/2.html" role="button">Read more</a>
+                    </div>
+                </div>
 
             </div>
         </div>  
