--- a/give.html
+++ b/give.html
@@ -124,7 +124,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col text-center">
-                                    <button class="btn btn-primary" type="submit">Button</button>
+                                    <button class="btn btn-primary" type="submit">Donate</button>
                                 </div>
                             </div>
                             <hr class="my-4">
