--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <p></p>
                 <div class="row">
                     <div class="col text-right">
-                        <a class="btn btn-dark float-right" href="news/2.html" role="button">Read more</a>
+                        <a class="btn btn-primary float-right" href="news/2.html" role="button">Read more</a>
                     </div>
                 </div>
 
