--- a/give.html
+++ b/give.html
@@ -124,7 +124,32 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col text-center">
-                                    <button class="btn btn-primary" type="submit">Donate</button>
+
+                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#donateModal">
+                                        Donate
+                                      </button>
+                                      
+                                      <!-- Modal -->
+                                      <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title" id="exampleModalLabel">Leaving our site</h5>
+                                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                              </button>
+                                            </div>
+                                            <div class="modal-body">
+                                              You will be leaving our website. You will be taken to a donation page powered by firstdata.com.
+                                              We use them to make sure the transactions are safe and secure.
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Keep me here</button>
+                                              <a type="button" class="btn btn-primary" href="https://google.com">Continue with donation</a>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <hr class="my-4">
