--- a/give.html
+++ b/give.html
@@ -82,6 +82,9 @@
                 <a class="dropdown-item text-muted" href="contact.html">Contact</a>
               </div>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link text-warning" href="social-media.html">Social Media</a>
+          </li>
           </ul>
           <!-- GOOGLE TRANSLATE BUTTON-->
           <div id="google_translate_element"></div>
