--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           />
           AEHCA Inc
         </a>
-
         <button
           class="navbar-toggler"
           type="button"
@@ -82,6 +81,9 @@
                 >
                 <a class="dropdown-item text-muted" href="contact.html">Contact</a>
               </div>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-warning" href="social-media.html">Social Media</a>
             </li>
           </ul>
             <!-- GOOGLE TRANSLATE BUTTON-->
