--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false"
-              >
+                >
                 Home <span class="sr-only">(current)</span>
               </a>
               <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
@@ -76,9 +76,7 @@
                 <a class="dropdown-item" href="give.html">Donate</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-muted" href="privacy.html">Privacy Policy</a>
-                <a class="dropdown-item text-muted" href="terms.html"
-                  >Terms and Conditions</a
-                >
+                <a class="dropdown-item text-muted" href="terms.html">Terms and Conditions</a>
                 <a class="dropdown-item text-muted" href="contact.html">Contact</a>
               </div>
             </li>
@@ -119,8 +117,7 @@
                         that were visiting countries where the virus had already spread. It is anticipated that as these return, 
                         they will bring the virus with them. For this reason President Alejandro Giammattei on March 16th prudently
                         announced the closing of borders to many other countries' nationals — including the USA — for the next 15 
-                        days in the hope of slowing the virus's spread.
-                        
+                        days in the hope of slowing the virus's spread.         
                     </div>
                 </div>
                   <p></p>
@@ -133,7 +130,6 @@
                         <a class="btn btn-primary float-right" href="news/2.html" role="button">Read more</a>
                     </div>
                 </div>
-
             </div>
         </div>  
     </main>
