--- a/terms.html
+++ b/terms.html
@@ -72,6 +72,7 @@
               <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index.html">Home</a>
+                <a class="dropdown-item" href="about.html">About</a>
                 <a class="dropdown-item" href="partnerships.html">Partnerships</a>
                 <a class="dropdown-item" href="give.html">Donate</a>
                 <div class="dropdown-divider"></div>
