updated text color of 404 error

--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
                 </div>
                 <p class="lead text-center">Association for Education and Health in Central America</p>
                 <hr class="my-4">
-                <h4 class="mt-0">404 Error</h4>
+                <h4 class="mt-0 text-danger">404 Error</h4>
                 <p></p>
                 <div class="media">
                     <img src="images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
