new image, placed on 404 page

--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
                 <h4 class="mt-0 text-danger">404 Error</h4>
                 <p></p>
                 <div class="media">
-                    <img src="images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
+                    <img src="images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
                     <div class="media-body">
                       <h6 class="mt-0">Billy Earles, CEO <small class="text-muted">August 1, 2020</small></h6>
                         OOPS! Looks like you tried to access something that isn't here any more. Please click 
