--- a/404.html
+++ b/404.html
@@ -16,16 +16,8 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/offset-fixed-navbar.css">
     <title>Association for Education and Health in Central America</title>
-    <link rel="shortcut icon" href="images/icon.ico"/>
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-        </script>
-        
-        <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <link rel="shortcut icon" href="images/icon.ico"/> 
   </head>
   <body>
     <main role="main">
@@ -43,7 +35,7 @@
                 <div class="media">
                     <img src="images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
                     <div class="media-body">
-                      <h6 class="mt-0">Billy Earles, CEO <small class="text-muted">August 1, 2020</small></h6>
+                      <h6 class="mt-0">Andrew Peterson, DoIT <small class="text-muted">August 1, 2020</small></h6>
                         OOPS! Looks like you tried to access something that isn't here any more. Please click 
                         the button below or one of the options above to return to a page we know about.         
                     </div>
