--- a/social-media.html
+++ b/social-media.html
@@ -68,7 +68,7 @@
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                Give <span class="sr-only">(current)</span>
+                Home <span class="sr-only">(current)</span>
               </a>
               <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
