updated social media page

--- a/social-media.html
+++ b/social-media.html
@@ -173,6 +173,20 @@
                             <div class="row">
                                 <div class="col text-center">
                                     <!-- FACEBOOK EMBED -->
+                                    <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/337414704271904" data-show-text="true" data-width="">
+                                      <blockquote cite="https://developers.facebook.com/AEHCAInc/posts/337414704271904" class="fb-xfbml-parse-ignore">
+                                        <p>Guatemala is now pushing 50,000 cases.  Probably by the time the next report goes out, they will exceed that...</p>Posted by 
+                                        <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central America</a> on&nbsp;
+                                        <a href="https://developers.facebook.com/AEHCAInc/posts/337414704271904">Saturday, August 1, 2020</a></blockquote></div>
+                                        <!-- END FACEBOOK EMBED -->
+                                </div>
+                            </div>
+                            <!-- Copy above to start a new facebook embed-->
+                            <!-- Copy below to start a new facebook embed-->
+                            <hr class="my-4">
+                            <div class="row">
+                                <div class="col text-center">
+                                    <!-- FACEBOOK EMBED -->
                                     <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/325760668770641" data-show-text="true" data-width="">
                                         <blockquote cite="https://developers.facebook.com/AEHCAInc/posts/325760668770641" class="fb-xfbml-parse-ignore">
                                             Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central America</a> 
