changed front page to show/link first article

--- a/index.html
+++ b/index.html
@@ -106,18 +106,21 @@
                 </div>
                 <p class="lead text-center">Association for Education and Health in Central America</p>
                 <hr class="my-4">
-                <h4 class="mt-0">Letter from the CEO</h4>
+                <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
                 <p></p>
                 <div class="media">
                     <img src="images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
                     <div class="media-body">
                       <h6 class="mt-0">Billy Earles, CEO <small class="text-muted">March 20, 2020</small></h6>
-                        I am writing today out of concern due to the outbreak of Coronavirus and how it may impact Guatemala.
-                        We are aware of at least 6 cases that have already been reported. However, there were many from Guatemala 
-                        that were visiting countries where the virus had already spread. It is anticipated that as these return, 
-                        they will bring the virus with them. For this reason President Alejandro Giammattei on March 16th prudently
-                        announced the closing of borders to many other countries' nationals — including the USA — for the next 15 
-                        days in the hope of slowing the virus's spread.         
+                      <p></p>
+                      <p>In July of 2018, our CEO traveled to Ipala and returned with ideas and objectives. After coordinating with 
+                          all partners involved, it was decided that we would provide funding for projects within the existing project 
+                          list of the partnerships.</p>
+                      <p>Our portion involved purchasing desks for the school at Poza de la Pila, smokeless stoves for schools, 
+                          and additional books for school shortages. We gathered $2,975 by asking family and friends to donate to this 
+                          need.</p>
+                      <p>In July of 2019, our CEO returned to Ipala and was pleased to see that the money was well spent. 
+                          The school at Poza de la Pila received 23 right hand desks and 7 left hand desks.</p>       
                     </div>
                 </div>
                   <p></p>
@@ -127,7 +130,7 @@
                 <p></p>
                 <div class="row">
                     <div class="col text-right">
-                        <a class="btn btn-primary float-right" href="news/2.html" role="button">Read more</a>
+                        <a class="btn btn-primary float-right" href="news/1.html" role="button">Read more</a>
                     </div>
                 </div>
             </div>
