--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
                 <h4 class="mt-0 text-danger">404 Error</h4>
                 <p></p>
                 <div class="media">
-                    <img src="images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
+                    <img src="/images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
                     <div class="media-body">
                       <h6 class="mt-0">Andrew Peterson, DoIT <small class="text-muted">August 1, 2020</small></h6>
                         OOPS! Looks like you tried to access something that isn't here any more. Please click 
