changing access methods to ensure reachability

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
     <title>Association for Education and Health in Central America</title>
-    <link rel="shortcut icon" href="images/icon.ico"/> 
+    <link rel="shortcut icon" href="/images/icon.ico"/> 
   </head>
   <body>
     <main role="main">
@@ -26,7 +26,7 @@
             <div class="jumbotron">
                 <p></p>
                 <div class="display-4">
-                    <img src="images/main-logo.png" class="img-fluid" alt="Responsive image">
+                    <img src="/images/main-logo.png" class="img-fluid" alt="Responsive image">
                 </div>
                 <p class="lead text-center">Association for Education and Health in Central America</p>
                 <hr class="my-4">
@@ -43,7 +43,7 @@
                   <p></p>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-primary" href="index.html" role="button">Return Home</a>
+                        <a class="btn btn-primary" href="/index.html" role="button">Return Home</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="give.html">donation page.</a></small
+                <a href="/give.html">donation page.</a></small
               ></span>
         </div>
     </footer>
