--- a/404.html
+++ b/404.html
@@ -35,9 +35,9 @@
                 <div class="media">
                     <img src="/images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
                     <div class="media-body">
-                      <h6 class="mt-0">Andrew Peterson, DoIT <small class="text-muted">August 1, 2020</small></h6>
+                      <h6 class="mt-0">Andrew Peterson, Director of Information and Technology <small class="text-muted">August 1, 2020</small></h6>
                         OOPS! Looks like you tried to access something that isn't here any more. Please click 
-                        the button below or one of the options above to return to a page we know about.         
+                        the button below to return to a page we know about.         
                     </div>
                 </div>
                   <p></p>
@@ -56,7 +56,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="/give.html">donation page.</a></small
+                <a href="/">donation page.</a></small
               ></span>
         </div>
     </footer>
