--- a/updates.html
+++ b/updates.html
@@ -85,7 +85,7 @@
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link text-warning" href="social-media.html">Social Media</a>
+              <a class="nav-link text-warning" href="updates.html">See Our Latest Updates</a>
           </li>
           </ul>
           <!-- GOOGLE TRANSLATE BUTTON-->
@@ -109,7 +109,7 @@
                 <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Social Media</a></li>
+                    <li class="breadcrumb-item"><a href="#">Latest Updates</a></li>
                 </ol>
                 </nav>
             </div>
