--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -79,11 +79,11 @@
                 <a class="dropdown-item text-muted" href="../../terms.html"
                   >Terms and Conditions</a
                 >
-                <a class="dropdown-item text-muted" href="../../contact">Contact</a>
+                <a class="dropdown-item text-muted" href="../../contact.html">Contact</a>
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link text-warning" href="../../social-media.html">Social Media</a>
+              <a class="nav-link text-warning" href="../../updates.html">See Our Latest Updates</a>
           </li>
           </ul>
           <!-- GOOGLE TRANSLATE BUTTON-->
