changed to root directory relative internal links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/offset-fixed-navbar.css">
+    <link rel="stylesheet" href="/css/offset-fixed-navbar.css">
     <title>Association for Education and Health in Central America</title>
-    <link rel="shortcut icon" href="images/icon.ico"/>
+    <link rel="shortcut icon" href="/images/icon.ico"/>
     <script type="text/javascript">
         function googleTranslateElementInit() {
           new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
@@ -35,7 +35,7 @@
         <a class="navbar-brand" href="#">
           <!-- CHANGE FOR OTHER PAGES. MAKE INDEX.HTML-->
           <img
-            src="images/icon.ico"
+            src="/images/icon.ico"
             width="30"
             height="30"
             class="d-inline-block align-top"
@@ -71,17 +71,17 @@
               </a>
               <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="about.html">About</a>
-                <a class="dropdown-item" href="partnerships.html">Partnerships</a>
-                <a class="dropdown-item" href="give.html">Donate</a>
+                <a class="dropdown-item" href="/about.html">About</a>
+                <a class="dropdown-item" href="/partnerships.html">Partnerships</a>
+                <a class="dropdown-item" href="/give.html">Donate</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-muted" href="privacy.html">Privacy Policy</a>
-                <a class="dropdown-item text-muted" href="terms.html">Terms and Conditions</a>
-                <a class="dropdown-item text-muted" href="contact.html">Contact</a>
+                <a class="dropdown-item text-muted" href="/privacy.html">Privacy Policy</a>
+                <a class="dropdown-item text-muted" href="/terms.html">Terms and Conditions</a>
+                <a class="dropdown-item text-muted" href="/contact.html">Contact</a>
               </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link text-warning" href="updates.html">See Our Latest Updates</a>
+                <a class="nav-link text-warning" href="/updates.html">See Our Latest Updates</a>
             </li>
           </ul>
             <!-- GOOGLE TRANSLATE BUTTON-->
@@ -89,7 +89,7 @@
             <!-- END GOOGLE TRANSLATE BUTTON-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-warning" href="give.html"><b>$</b> Give</a>
+              <a class="nav-link text-warning" href="/give.html"><b>$</b> Give</a>
             </li>
           </ul>
         </div>
@@ -102,14 +102,14 @@
             <div class="jumbotron">
                 <p></p>
                 <div class="display-4">
-                    <img src="images/main-logo.png" class="img-fluid" alt="Responsive image">
+                    <img src="/images/main-logo.png" class="img-fluid" alt="Responsive image">
                 </div>
                 <p class="lead text-center">Association for Education and Health in Central America</p>
                 <hr class="my-4">
                 <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
                 <p></p>
                 <div class="media">
-                    <img src="images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
+                    <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
                     <div class="media-body">
                       <h6 class="mt-0">Billy Earles, CEO <small class="text-muted">March 20, 2020</small></h6>
                       <p></p>
@@ -125,12 +125,12 @@
                 </div>
                   <p></p>
                 <div class="display-4">
-                    <img src="images/ipala.jpg" class="img-fluid rounded" alt="Responsive image">
+                    <img src="/images/ipala.jpg" class="img-fluid rounded" alt="Responsive image">
                 </div>
                 <p></p>
                 <div class="row">
                     <div class="col text-right">
-                        <a class="btn btn-primary float-right" href="news/1.html" role="button">Read more</a>
+                        <a class="btn btn-primary float-right" href="/news/1.html" role="button">Read more</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="give.html">donation page.</a></small
+                <a href="/give.html">donation page.</a></small
               ></span>
         </div>
     </footer>
