--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/offset-fixed-navbar.css">
+    <link rel="stylesheet" href="/css/offset-fixed-navbar.css">
     <title>Association for Education and Health in Central America</title>
-    <link rel="shortcut icon" href="images/icon.ico"/>
+    <link rel="shortcut icon" href="/images/icon.ico"/>
     <script type="text/javascript">
         function googleTranslateElementInit() {
           new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
@@ -31,10 +31,10 @@
     <!-- NAVBAR -->
     <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/index.html">
           <!-- CHANGE FOR OTHER PAGES. MAKE INDEX.HTML-->
           <img
-            src="images/icon.ico"
+            src="/images/icon.ico"
             width="30"
             height="30"
             class="d-inline-block align-top"
@@ -71,19 +71,19 @@
               </a>
               <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="index.html">Home</a>
-                <a class="dropdown-item" href="partnerships.html">Partnerships</a>
-                <a class="dropdown-item" href="give.html">Donate</a>
+                <a class="dropdown-item" href="/index.html">Home</a>
+                <a class="dropdown-item" href="/partnerships.html">Partnerships</a>
+                <a class="dropdown-item" href="/give.html">Donate</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-muted" href="privacy.html">Privacy Policy</a>
-                <a class="dropdown-item text-muted" href="terms.html"
+                <a class="dropdown-item text-muted" href="/privacy.html">Privacy Policy</a>
+                <a class="dropdown-item text-muted" href="/terms.html"
                   >Terms and Conditions</a
                 >
-                <a class="dropdown-item text-muted" href="contact.html">Contact</a>
+                <a class="dropdown-item text-muted" href="/contact.html">Contact</a>
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link text-warning" href="updates.html">See Our Latest Updates</a>
+              <a class="nav-link text-warning" href="/updates.html">See Our Latest Updates</a>
           </li>
           </ul>
           <!-- GOOGLE TRANSLATE BUTTON-->
@@ -91,7 +91,7 @@
           <!-- END GOOGLE TRANSLATE BUTTON-->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-warning" href="give.html"><b>$</b> Give</a>
+              <a class="nav-link text-warning" href="/give.html"><b>$</b> Give</a>
             </li>
           </ul>
         </div>
@@ -106,7 +106,7 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">About</a></li>
                 </ol>
                 </nav>
@@ -142,7 +142,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
-                                            <img src="images/vision.jpg" class="card-img-top h-100" alt="our logo">
+                                            <img src="/images/vision.jpg" class="card-img-top h-100" alt="our logo">
                                         </div>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                 <div class="card" >
                                     <div class="row no-gutters">
                                         <div class="col-sm-5">
-                                            <img src="images/history.jpg" class="card-img-top h-100" alt="history">
+                                            <img src="/images/history.jpg" class="card-img-top h-100" alt="history">
                                         </div>
                                         <div class="col-sm-7">
                                             <div class="card-body">
@@ -180,7 +180,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
-                                            <img src="images/about-logo.png" class="card-img-top h-100" alt="our logo">
+                                            <img src="/images/about-logo.png" class="card-img-top h-100" alt="our logo">
                                         </div>
                                     </div>
                                 </row>
@@ -199,7 +199,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="give.html">donation page.</a></small
+                <a href="/give.html">donation page.</a></small
               ></span>
         </div>
     </footer>
