--- a/give.html
+++ b/give.html
@@ -83,7 +83,7 @@
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link text-warning" href="/updates.html">View Our Latest Updates</a>
+              <a class="nav-link text-warning" href="/updates.html">See Our Latest Updates</a>
           </li>
           </ul>
           <!-- GOOGLE TRANSLATE BUTTON-->
