--- a/partnerships.html
+++ b/partnerships.html
@@ -28,76 +28,71 @@
   </head>
   <body>
     
-    <!-- NAVBAR -->
-    <header>
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html">
-          <!-- CHANGE FOR OTHER PAGES. MAKE INDEX.HTML-->
-          <img
-            src="/images/icon.ico"
-            width="30"
-            height="30"
-            class="d-inline-block align-top"
-            alt="aehca inc logo"
-          />
-          AEHCA Inc
-        </a>
-
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active dropdown">
-              <a
-                class="nav-link dropdown-toggle text-warning"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Partnerships <span class="sr-only">(current)</span>
-              </a>
-              <!-- CHANGE ACCORDING TO WHICH PAGE THIS IS-->
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/index.html">Home</a>
-                <a class="dropdown-item" href="/about.html">About</a>
-                <a class="dropdown-item" href="/give.html">Donate</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-muted" href="/privacy.html">Privacy Policy</a>
-                <a class="dropdown-item text-muted" href="/terms.html"
-                  >Terms and Conditions</a
-                >
-                <a class="dropdown-item text-muted" href="/contact.html">Contact</a>
-              </div>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link text-warning" href="/updates.html">See Our Latest Updates</a>
-            </li>
-          </ul>
-          <!-- GOOGLE TRANSLATE BUTTON-->
-          <div id="google_translate_element"></div>
-          <!-- END GOOGLE TRANSLATE BUTTON-->
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link text-warning" href="/give.html"><b>$</b> Give</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <!-- END NAVBAR -->
+ <!-- NAVBAR -->
+ <header>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img
+        src="/images/icon.ico"
+        width="30"
+        height="30"
+        class="d-inline-block align-top"
+        alt="aehca inc logo"
+      />
+      AEHCA Inc
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link text-warning font-weight-bold" href="/updates.html">Latest Updates</span></a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-warning" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-warning" href="/about.html">About</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-warning" href="/partnerships.html">Partnerships</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-warning" href="/give.html">Donate</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-warning" href="/contact.html">Contact</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-info" href="/terms.html">Terms</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-info" href="/privacy.html">Privacy</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link text-warning" href="/give.html"><b>$</b> Give&nbsp;&nbsp;&nbsp;</a>
+        </li>
+        <!-- GOOGLE TRANSLATE BUTTON-->
+        <li>
+            <div id="google_translate_element"></div>
+        </li>
+        <!-- END GOOGLE TRANSLATE BUTTON-->
+      </ul>
+    </div>
+  </nav>
+</header>
+<!-- END NAVBAR -->
 
     <main role="main">
         <div class="container-md">
